# ecs-engine-demo

./: CMakeLists.txt  README.md
include/: ResourceManager.hpp
include/core/: Component.hpp  Entity.hpp  LuaScriptComponent.hpp  RenderComponent.hpp  TransformComponent.hpp  World.hpp
include/serialization/: Serialization.hpp
include/system/: RenderSystem.hpp  ScriptingSystem.hpp  Shader.hpp
scripts/: rotate.lua
shaders/: basic.frag  basic.vert
src/: ResourceManager.cpp  main.cpp
src/serialization/: Serialization.cpp
src/system/: ScriptingSystem.cpp  Shader.cpp
